se cambia el nombre Imagenes

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
 <head>
     <meta charset="utf-8" />
     <title>Marité RA</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="mystyle.css"/>
   </head>
 
   <body>
    <header>
     <div class="container">
-      <p class="logo">Marité RA</p>
+      <p class="logo">Mari-Té</p>
         <nav>
           <a href="">INICIO</a>
           <a href="">QUIENES SOMOS?</a>
