Se corrige responsive

--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
    <section id="primera">
     <div class="container">
 
-    <div class="img container"></div>
-    <h2>Marité, Repostería Artesanal</h2>
+    <div class="img-container"></div>
+    <div class="texto">
+      <h2>Marité, Repostería Artesanal</h2>
     <p>Nos especializamos en tartas, facturas, cupcakes y las tortas mas rícas. Somos un emprendimiento joven, pero con mucha pasíon y con ganas de entregar las mejores delicias para compartir en una tarde de mates, o los eventos mas importantes. Mirá nuestras fotos, deleitate y comunicate con nosotros!</p>
+    </div>
+    
   </div>
    </section>
    
@@ -54,7 +57,7 @@
       <div class="cartas">
       <div class="carta">
         
-        <h2>Tartas</h2>
+        <h2> Tartas </h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt omnis facilis labore architecto optio. Magni voluptas non modi, quaerat natus commodi ex doloremque qui labore optio adipisci, repudiandae itaque repellat!</p>
       <button>GALERIA</button>
     </div>
@@ -64,7 +67,7 @@
       <button>GALERIA</button>
     </div>
     <div class="carta">
-      <h2>Tortas</h2>
+      <h2> Tortas </h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt omnis facilis labore architecto optio. Magni voluptas non modi, quaerat natus commodi ex doloremque qui labore optio adipisci, repudiandae itaque repellat!</p>
       <button>GALERIA</button>
     </div>
